# wabee-sdk

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.txt  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  toolspec.yaml.template
.github/workflows/: ci.yml
examples/: division_tool.py  food_ordering_tool.py  power_tool.py  print_tool.py
examples/tools/: division_tool.py  food_ordering_tool.py  power_tool.py  print_tool.py
scripts/: generate_protos.sh
semantix_agent_tools/: __init__.py  semantix_agent_tool.py  semantix_agent_tool_config.py  semantix_agent_tool_field_validator.py  semantix_agent_tool_input.py  semantix_agent_tool_input_field.py
semantix_agent_tools/files/: file_handler.py
semantix_agent_tools/handlers/: __init__.py  file_handler.py
semantix_agent_tools/handlers/exec/: python_execution_handler.py
semantix_agent_tools/handlers/files/: file_handler.py
semantix_agents/: __init__.py  semantix_agent_tool.py  semantix_agent_tool_config.py
semantix_agents/cli/: main.py
semantix_agents/cli/tools/: create_tool_service.py
semantix_agents/handlers/: __init__.py
semantix_agents/tools/: __init__.py  semantix_agent_tool.py  semantix_agent_tool_config.py  semantix_agent_tool_field.py  semantix_agent_tool_field_validator.py  semantix_agent_tool_input.py
semantix_agents/tools/handlers/: python_execution_handler.py
sssww/: server.py  toolspec.yaml
testjj/: server.js
tests/: test_semantix_agent_tool.py  test_semantix_agent_tool_config.py  test_semantix_agent_tool_field_validator.py  test_semantix_agent_tool_input.py  test_semantix_agent_tool_input_field.py
tests/cli/tools/: test_create_tool_service.py
tests/dates/: test_date_handler.py
tests/exec/: test_python_execution_handler.py
tests/files/: test_file_handler.py
tests/handlers/: test_date_handler.py  test_file_handler.py  test_python_execution_handler.py
tests/handlers/dates/: test_date_handler.py
tests/handlers/exec/: test_python_execution_handler.py
tests/handlers/files/: test_file_handler.py
tests/tools/: test_base_tool.py  test_semantix_agent_tool.py  test_semantix_agent_tool_config.py  test_semantix_agent_tool_field.py  test_semantix_agent_tool_field_validator.py  test_semantix_agent_tool_input.py  test_semantix_agent_tool_input_field.py  test_simple_tool.py  test_wabee_agent_tool.py  test_wabee_agent_tool_config.py  test_wabee_agent_tool_field.py  test_wabee_agent_tool_field_validator.py  test_wabee_agent_tool_input.py
tests/tools/handlers/: test_date_handler.py  test_file_handler.py  test_python_execution_handler.py
wabee-js/: README.md  package-lock.json  package.json  tsconfig.json
wabee-js/examples/: simple.ts
wabee-js/src/: index.ts
wabee-js/src/client/: index.ts
wabee-js/src/client/protos/: tool_service.ts
wabee-js/src/tools/: simpleTool.ts  toolError.ts
wabee/cli/: README.md  main.py
wabee/cli/commands/: create_tool.py
wabee/cli/tools/: build_tool_service.py  create_tool_service.py
wabee/cli/tools/templates/: js_server.js  python_server.py
wabee/cli/tools/templates/s2i/: Dockerfile
wabee/rpc/: client.py  loader.py  schema.py  server.py
wabee/rpc/protos/: tool_service.proto  tool_service_pb2.py  tool_service_pb2.pyi  tool_service_pb2_grpc.py
wabee/tools/: __init__.py  base_model.py  base_tool.py  simple_tool.py  tool_error.py  wabee_agent_tool.py  wabee_agent_tool_config.py  wabee_agent_tool_field.py  wabee_agent_tool_field_validator.py  wabee_agent_tool_input.py
wabee/tools/handlers/: __init__.py  date_handler.py  file_handler.py  python_execution_handler.py
