[tool.poetry]
name = "semantix-agent-tools"
version = "0.1.0"
description = "Semantix Agent Tools Software Development Kit"
authors = ["GDalforno <gabriel.dalforno@semantix.ai>"]
maintainers = ["GDalforno <gabriel.dalforno@semantix.ai>"]
license = "Proprietary"
readme = "README.md"
keywords = ["semantix", "generative ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "0.1.6"
chardet = "^5.2.0"
pandas = "^2.2.2"
restrictedpython = "6.0"
matplotlib = "^3.8.4"

[tool.poetry.scripts]
power_tool_example = 'examples.power_tool:main'
division_tool_example = 'examples.division_tool:main'
food_ordering_tool_example = 'examples.food_ordering_tool:main'


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
