[tool.poetry]
name = "semantix-agents"
version = "0.1.0"
description = "Semantix Agents Software Development Kit"
authors = ["GDalforno <gabriel.dalforno@semantix.ai>", "Erigar <eric.garcia@semantix.ai>"]
maintainers = ["GDalforno <gabriel.dalforno@semantix.ai>", "Erigar <eric.garcia@semantix.ai>"]
license = "Proprietary"
readme = "README.md"
keywords = ["semantix", "generative ai", "llm agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.14"
chardet = "^5.2.0"
pandas = "^2.2.2"
restrictedpython = "^7.1"
matplotlib = "^3.8.4"

[tool.poetry.scripts]
semantix-agents = 'semantix_agents.cli.main:main'
power_tool_example = 'examples.tools.power_tool:main'
division_tool_example = 'examples.tools.division_tool:main'
food_ordering_tool_example = 'examples.tools.food_ordering_tool:main'
print_tool_example = 'examples.tools.print_tool:main'


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.coverage.run]
omit = ["tests/*"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+g{{commit}}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
