[tool.poetry]
name = "wabee"
version = "0.2.7"
description = "Wabee AI Software Development Kit"
authors = ["Developers <developers@wabee.ai>"]
maintainers = ["Developers <developers@wabee.ai>"]
license = "Apache License V2"
readme = "README.md"
keywords = ["wabee", "wabee ai", "ai agents", "generative ai", "llm agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
chardet = "^5.2.0"
restrictedpython = "^7.1"
pyyaml = "^6.0.1"
inquirer = "^3.4.0"
grpcio = "^1.68.0"
grpcio-tools = "^1.68.0"
pydantic = "2.9.2"
typing-extensions = "^4.12.2"
requests = "^2.32.3"

[tool.poetry.scripts]
wb = 'wabee.cli.main:main'
wabee = 'wabee.cli.main:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"

[tool.coverage.run]
omit = ["tests/*"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+g{{commit}}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
